fix(flexlb): complete request PV and cache feedback telemetry